# bpl-pyapp-cookiecutter

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .dockerignore  .env-example  .gitignore  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  test-runner.sh
{{ cookiecutter.project_slug }}/.github/workflows/: build.yaml  unittest.yaml
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_version.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: _version.py  common.py  config.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/api/: auth.py  base.py  deps.py  main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/cli/: main.py
