[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["cunybpl <cunybpldev@gmail.com>"]
description = "{{ cookiecutter.project_description }}"
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
version = "0.1.0a0"

[tool.poetry.dependencies]
aiodal = {git = "https://github.com/cunybpl/aiodal.git", tag = "0.5.1"}
alembic = "^1.11.2"
anyio = "^3.7.1"
asyncpg = "^0.27.0"
click = "^8.1.3"
fastapi = "^0.103"
fastapi_auth0 = {git = "https://github.com/cunybpl/fastapi_auth0.git", tag = "0.2.2"}
orjson = "^3.9.5"
pydantic = "^2.3"
python = ">=3.11,<3.12"
uvicorn = {extras = ["standard"], version = "^0.23.0"}

[tool.poetry.scripts]
beist = "{{ cookiecutter.project_slug }}.cli.main:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s]%(message)s(%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = ["live:markalivetest"]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = ["pragma:nocover"]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
debugpy = "^1.6.7"
mypy = "^1.0.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
respx = "^0.20.2"
